--- a/index.html
+++ b/index.html
@@ -1,68 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>Home | Creepy Alastor</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <title>📦 فك ضغط ورفع إلى GitHub - Cards</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </head>
-<body>
-    <!-- شريط علوي -->
-  <header class="navbar">
-    <div class="container">
-      <button class="menu-button" onclick="toggleMenu()">☰ Menu</button>
-      <button class="lang-toggle" onclick="toggleLanguage()">🌐</button>
-      <nav id="menuList" class="menu-list hidden">
-        <a href="index.html" data-en="Home" data-ar="الرئيسية">Home</a>
-        <a href="info.html" data-en="Info" data-ar="معلومات">Info</a>
-        <a href="projects.html" data-en="Projects" data-ar="مشاريع">Projects</a>
-        <a href="channels.html" data-en="Channels" data-ar="القنوات">Channels</a>
-        <a href="contact.html" data-en="Contact" data-ar="للتواصل">Contact</a>
-        <a href="products.html" data-en="Products" data-ar="المنتجات">Products</a>
-      </nav>
-    </div>
-  </header>
+<body style="background:#111; color:#fff; text-align:center; font-family:sans-serif; padding:20px">
 
-  <!-- المحتوى الرئيسي -->
-  <main class="main-content">
-    <h1 class="main-title" data-en="Welcome to Alastor's Bloody Realm" data-ar="مرحبًا بك في عالم ألاستور الدموي">
-      Welcome to Alastor's Bloody Realm
-    </h1>
-    <p class="main-subtitle" data-en="Explore the dark side of creativity & code 🩸" data-ar="اكتشف الجانب المظلم من الإبداع والبرمجة 🩸">
-      Explore the dark side of creativity & code 🩸
-    </p>
-  </main>
+  <h1>📂 فك ضغط ورفع إلى مجلد <code>cards</code> 🃏</h1>
+  <input type="file" id="zipFile" accept=".zip" />
+  <br><br>
+  <button onclick="handleZip()">📤 رفع محتويات ZIP</button>
 
-  <!-- سكريبتات -->
+  <div id="status" style="margin-top:20px; text-align:left; max-width:600px; margin-inline:auto;"></div>
+
   <script>
-    function toggleMenu() {
-      const menu = document.getElementById("menuList");
-      menu.classList.toggle("show");
-      menu.classList.toggle("hidden");
-      menu.classList.toggle("fade-in");
-    }
+    const token = "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"; // ⚠️ لا تنشر هذا التوكن علنًا
+    const repo = "RADIOdemon6-alt/Dark-node";
+    const apiUrl = `https://api.github.com/repos/${repo}/contents/cards/`;
 
-    function toggleLanguage() {
-      const currentLang = localStorage.getItem("lang") || "en";
-      const newLang = currentLang === "en" ? "ar" : "en";
-      localStorage.setItem("lang", newLang);
-      applyLanguage(newLang);
-    }
+    async function handleZip() {
+      const fileInput = document.getElementById("zipFile");
+      const statusDiv = document.getElementById("status");
+      if (!fileInput.files[0]) return alert("❗ اختر ملف .zip أولًا.");
 
-    function applyLanguage(lang) {
-      const elements = document.querySelectorAll("[data-en]");
-      elements.forEach(el => {
-        el.textContent = el.getAttribute(`data-${lang}`);
-      });
-      document.body.dir = lang === "ar" ? "rtl" : "ltr";
-      document.body.style.textAlign = lang === "ar" ? "right" : "left";
-    }
+      statusDiv.innerHTML = "⏳ جاري فك ضغط الملف...";
+      const zip = new JSZip();
+      const zipData = await zip.loadAsync(fileInput.files[0]);
 
-    window.addEventListener("DOMContentLoaded", () => {
-      const savedLang = localStorage.getItem("lang") || "en";
-      applyLanguage(savedLang);
-    });
+      const files = Object.keys(zipData.files);
+      if (files.length === 0) return statusDiv.innerHTML = "❌ الملف لا يحتوي على أي ملفات.";
+
+      let success = 0;
+      let fail = 0;
+
+      for (const filename of files) {
+        const file = zipData.files[filename];
+        if (file.dir) continue;
+
+        const base64 = await file.async("base64");
+
+        const uploadRes = await fetch(apiUrl + encodeURIComponent(filename), {
+          method: "PUT",
+          headers: {
+            Authorization: `token ${token}`,
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            message: `Upload ${filename} from zip`,
+            content: base64
+          })
+        });
+
+        if (uploadRes.ok) {
+          success++;
+          statusDiv.innerHTML += `<div style="color:lightgreen">✅ ${filename}</div>`;
+        } else {
+          const error = await uploadRes.json();
+          fail++;
+          statusDiv.innerHTML += `<div style="color:salmon">❌ ${filename}: ${error.message}</div>`;
+        }
+      }
+
+      statusDiv.innerHTML += `<hr><strong>🎯 تم الرفع: ${success} ناجح / ${fail} فشل</strong>`;
+    }
   </script>
 </body>
 </html>
